<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/reset_password_container_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="@dimen/size_24dp"
    android:scrollbars="none"
    tools:context=".feature.login.view.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/reset_password_button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/login_modulo_bg_button_back"
            android:padding="@dimen/size_8dp"
            android:src="@drawable/arrow_back_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/reset_password_text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_password"
            android:textColor="@color/black"
            android:textSize="@dimen/size_font_24sp"
            android:layout_marginBottom="@dimen/size_32dp"
            app:layout_constraintBottom_toTopOf="@+id/reset_password_email_edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/reset_password_email_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/login_module_bg_edit_text"
            android:drawableStart="@drawable/baseline_email_24"
            android:drawablePadding="@dimen/size_8dp"
            android:hint="@string/digite_seu_email"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="@dimen/size_16dp"
            android:padding="@dimen/size_16dp"
            app:layout_constraintBottom_toTopOf="@+id/reset_password_button_enter_app"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reset_password_text_title" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/reset_password_button_enter_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/state_button_login"
            android:layout_marginBottom="@dimen/size_32dp"
            android:gravity="center"
            android:padding="@dimen/size_16dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/size_20sp"
            app:layout_constraintBottom_toTopOf="@+id/reset_password_progress_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reset_password_email_edit" />

        <ProgressBar
            android:id="@+id/reset_password_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/test_1"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reset_password_button_enter_app" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>