<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_container_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.view.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_container_constraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/size_24dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size_64dp"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="@dimen/size_font_32sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/login_email_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/size_8dp"
            app:boxStrokeColor="@color/black"
            app:endIconMode="clear_text"
            app:hintTextColor="@color/black"
            app:layout_constraintBottom_toTopOf="@id/login_password_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:startIconDrawable="@drawable/baseline_email_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_email_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:hint="@string/digite_seu_email"
                android:inputType="textEmailAddress"
                android:maxLength="100"
                android:drawablePadding="@dimen/size_4dp"
                android:maxLines="1"
                android:textSize="@dimen/size_font_16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/size_8dp"
            app:boxStrokeColor="@color/black"
            app:endIconMode="password_toggle"
            app:hintTextColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_email_layout"
            app:startIconDrawable="@drawable/baseline_password_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/digite_sua_senha"
                android:inputType="textPassword"
                android:maxLength="100"
                android:maxLines="1"
                android:textSize="@dimen/size_font_16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/login_ck_remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_8dp"
            android:text="@string/remember"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:buttonTint="@color/black"
            app:layout_constraintStart_toStartOf="@id/login_password_layout"
            app:layout_constraintTop_toBottomOf="@id/login_password_layout" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/login_linear_container_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_ck_remember">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/login_text_question_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/size_8dp"
                android:layout_marginEnd="@dimen/size_8dp"
                android:text="@string/ainda_nao_tem_cadastro"
                android:textSize="@dimen/size_font_16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/login_btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/size_8dp"
                android:text="@string/cadastrese"
                android:textColor="@color/black"
                android:textSize="@dimen/size_20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/login_linear_container_reset_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_linear_container_register">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/login_text_question_reset_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/size_8dp"
                android:layout_marginEnd="@dimen/size_8dp"
                android:text="@string/esqueceu_sua_senha"
                android:textSize="@dimen/size_font_16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/login_btn_reset_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/size_8dp"
                android:text="@string/registre_se"
                android:textColor="@color/black"
                android:textSize="@dimen/size_20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_btn_enter_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_32dp"
            android:backgroundTint="@color/black"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_linear_container_reset_password" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|top"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/login_btn_enter_app"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linearLayoutCompat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <br.com.gds.login.customview.logoView.LogoView
                    android:id="@+id/google_provider"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/size_4dp"
                    app:logoImage="@drawable/google_logo"
                    app:logoText="Google" />

                <br.com.gds.login.customview.logoView.LogoView
                    android:id="@+id/apple_provider"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/size_4dp"
                    app:logoImage="@drawable/apple_logo"
                    app:logoText="Apple" />

                <br.com.gds.login.customview.logoView.LogoView
                    android:id="@+id/facebook_provider"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/size_4dp"
                    app:logoImage="@drawable/facebook_logo"
                    app:logoText="Facebook" />

                <br.com.gds.login.customview.logoView.LogoView
                    android:id="@+id/game_center_provider"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/size_4dp"
                    app:logoImage="@drawable/game_center_logo"
                    app:logoText="Game Center" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linearLayoutCompat2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat">

                <br.com.gds.login.customview.logoView.LogoView
                    android:id="@+id/github_provider"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/size_4dp"
                    app:logoImage="@drawable/github_logo"
                    app:logoText="GitHUb" />

                <br.com.gds.login.customview.logoView.LogoView
                    android:id="@+id/microsoft_provider"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/size_4dp"
                    app:logoImage="@drawable/microsoft_logo"
                    app:logoText="Microsoft" />

                <br.com.gds.login.customview.logoView.LogoView
                    android:id="@+id/play_games_provider"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/size_4dp"
                    app:logoImage="@drawable/play_games_logo"
                    app:logoText="Play Games" />

                <br.com.gds.login.customview.logoView.LogoView
                    android:id="@+id/twitter_provider"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/size_4dp"
                    app:logoImage="@drawable/twitter_logo"
                    app:logoText="Twitter" />

                <br.com.gds.login.customview.logoView.LogoView
                    android:id="@+id/yahoo_provider"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/size_4dp"
                    app:logoImage="@drawable/yahoo_logo"
                    app:logoText="Yahoo" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linearLayoutCompat3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat2">

                <br.com.gds.login.customview.logoView.LogoView
                    android:id="@+id/phone_provider"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/size_4dp"
                    app:logoImage="@drawable/baseline_phone_24"
                    app:logoText="Telefone" />

                <br.com.gds.login.customview.logoView.LogoView
                    android:id="@+id/guests_provider"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/size_4dp"
                    app:logoImage="@drawable/baseline_person_24"
                    app:logoText="Visitante" />
            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>